
2012-08-02  Cedric Bail

	* Fix elm_image_orient_set/get.

2012-08-06  Cedric Bail

	* Make Elm_Slider update itself asynchronously.

2012-08-09  Cedric Bail

	* Reset main loop after fork in quicklaunch.

2012-08-18  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access in: colorselecto, win, diskselector,
          gengrid, genlist, progressbar, slider, label, entry

2012-08-20   Jihyeon Seol

	* Fix sizing issue in multibutton entry by making all lines
          the same height.

2012-08-20  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access support in datetime.

2012-08-21  Carsten Haitzler (The Rasterman)

	* Spotted an incompleteness. there is a way to set Elm_Win_Trap for
          manual render, but no way to go to an elm win and do this (And
          of course twiddle with the norender state too), so add this in.
          elm_win_norender_push(), elm_win_norender_pop(),
          elm_win_norender_get() and elm_win_render() added.

2012-08-21  Shinwoo Kim (kimcinoo)

	* Patch in incomplete access support in segment control and spinner

2012-08-28  Carsten Haitzler (The Rasterman)

	* Track window states as a total count and be able to self-throttle
          or suspend rendering as a result.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-30  Gustavo Lima Chaves (glima)

	* Toolbar widget is now a scrollable widget.
	* Entry widget is now a scrollable layout.
	* Fileselector entry widget is now an elm layout.
	* Ctxpopup widget is now an elm layout.
	* Multibutton entry entry is now an elm layout.
	* Popup widget is now an elm layout.
	* Panel widget is now an elm layout.
	* All internal widget hooks (and related macros) were removed, due
	to deprecation. Thus, people using that (unstable) API will have
	to adapt themselves.

2012-08-30  Shilpa Onkar Singh

	* Naviframe's item Subtitle_label deleted in item_free.

2012-08-31  WooHyun Jung

	* The state of elm_check is now changed by mouse click event.
